<resources>
    <string name="app_name">طازج</string>
    <string name="information_one">للأكل الصحي عدّة فوائد للجسم، نذكر منها: يعزّز مناعة الجسم، ويزيد من مقاومته للالتهابات، والعدوات الفيروسية والبكتيرية والفطرية. يقي من الإصابة بكثيرٍ من الأمراض، مثل أمراض القلب، والأوعية الدموية، ومرض السكري، ومرض ارتفاع ضغط الدم، ومرض السرطان، وأمراض الغدد، وفقر الدم، وغيرها الكثير من الأمراض.</string>
    <string name="information_two">يعدّ الطعام الطازج صحيّاً أكثر من الأغذية المعلّبة، حيث تفقد بعض العناصر الغذائية، ويزيد احتمال تعرّضها للسموم. يسهل عمليّة الهضم؛ لاحتوائه على الأنزيمات الطبيعية بنسبةٍ عاليةٍ. يقوّي جهاز المناعة، ومقاومته للأمراض لاستفادة الجسم الكاملة من العناصر الغذائية.
</string>
    <string name="vegetables">vegetables</string>
    <string name="herbs">herbs</string>
    <string name="fruits">fruits</string>
    <string name="Open">BuyFresh</string>
    <string name="Close">BuyFresh</string>
    <string name="AbdalyGreens">خصرة مزارع العبدلي</string>
    <string name="FruitFarmers">FruitFarmers</string>

    <string name="eggplant">باذنجان</string>
    <string name="khrais">مزارع الخريص</string>
    <string name="basket">سلة</string>
    <string name="abdaliGreens">خضرة مزارع العبدلي</string>
    <string name="pumpkin">قرع</string>
    <string name="greenPepper">فلفل اخضر</string>
    <string name="okra">بامية</string>
    <string name="cucumber">خيار</string>
    <string name="feildPumpkin">كوسا</string>

    <string name="badra">مزرعة بدرة</string>
    <string name="redPepper">فلفل احمر</string>
    <string name="coldPepper">فلفل بارد</string>
    <string name="pumpkinHoney">قرع عسلي</string>
    <string name="wafraCoop">جمعية الوفرة السكنية</string>
    <string name="lemon">ليمون</string>
    <string name="apples">تفاح</string>
    <string name="kshf">كشف</string>
    <string name="pears">عرموط</string>
    <string name="peach">خوخ</string>
    <string name="banana">موز</string>
    <string name="mshmsh">مشمش</string>
    <string name="grape">عنب</string>
    <string name="cherry">كرز</string>
    <string name="watermelon">رقي</string>
    <string name="afandy">أفندي</string>
    <string name="ghanayim">غنايم الوفرة للخضار و الفواكه</string>
    <string name="raman">رمان</string>
    <string name="kiwi">كيوي</string>
    <string name="tomato">طماط</string>
    <string name="khudrtna">خضرتنا</string>
    <string name="basteen">بساتين العبدلي للخضار و الفواكه</string>
    <string name="oranges">برتقال</string>
    <string name="straw">فراولة</string>
    <string name="world">عالم الفرضة للخضار و الفواكه</string>
    <string name="group">مجموعة</string>
    <string name="sonf">صنف</string>
    <string name="nouf">نوف الكويت للخضار و الفواكه</string>
    <string name="HerbFarmers">HerbFarmers</string>
    <string name="redOnion">بصل احمر</string>
    <string name="Onion">بصل ابيض</string>
    <string name="kazbara">كزبرة</string>
    <string name="bagdoonis">بقدونس</string>
    <string name="shbnt">شبنت</string>
    <string name="shda">شدة كبيرة</string>
    <string name="nana">نعناع</string>
    <string name="jarjeer">جرجير</string>
    <string name="bagl">بقل</string>
    <string name="barbeer">بربيير</string>
    <string name="shdaBig">شدة كبيرة</string>
    <string name="slk">سلك</string>
    <string name="rayhan">ريحان</string>
    <string name="sabankh">سبانخ</string>
    <string name="roed">رويد</string>
    <string name="karfs">كرفس</string>
    <string name="fajl">فجل</string>
    <string name="khas">خس</string>
    <string name="kari">كاري</string>
    <string name="VeggieFarmers">VeggieFarmers</string>
    <string name="broccoli">بروكلي</string>
    <string name="patato">بطاط</string>
    <string name="malfoof">ملفوف</string>
    <string name="mushroom">مشروم</string>
    <string name="greenOnion">بصل اخضر</string>
    <string name="shwal">شوال</string>
    <string name="kurkum">كركم</string>
    <string name="carrot">جزر</string>
    <string name="garlic">ثوم</string>
    <string name="malfoofRed">ملفوف احمر</string>
    <string name="rabdat"> ربطات</string>
    <string name="fasoolya">فاصوليا</string>
    <string name="rabda">ربطة</string>
    <string name="corn">ذرة</string>
    <string name="message">السلام عليكم، ودي اطلب منكم</string>
    <string name="doesntShip">whatsAppتواصل عبر ال</string>
    <string name="whatsAppGone">whatsAppيجب يكون لديك ال</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="info">معلومات</string>
    <string name="profile">الملف الشخصي</string>
    <string name="settings">الإعدادت</string>
    <string name="instaMessage">زورنا على الانستقرام:</string>
    <string name="information">معلومات</string>
    <string name="txtKindof">فائدة الغذاء الصحي:</string>
    <string name="infotxt">فائدة الغذاء الطازج:</string>


</resources>