<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dl"
    android:theme="@style/NavigationDrawerStyle"
    >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".InformationActivity"
            android:id="@+id/frameLayout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-160dp"
            android:layout_marginBottom="350dp"
            android:scaleType="centerCrop"
            android:src="@drawable/information_farm"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"/>


                    <ImageView
                        android:id="@+id/green_square"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="50dp"
                        android:src="@drawable/green_square" />



                    <TextView
                        android:id="@+id/information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/green_square"
                        android:layout_alignTop="@id/green_square"
                        android:layout_alignRight="@id/green_square"
                        android:layout_alignBottom="@id/green_square"
                        android:fontFamily="@font/tajawal_bold"
                        android:lineSpacingExtra="1dp"
                        android:padding="10dp"
                        android:text="@string/information"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:elevation="3dp"/>
                <ImageView
                    android:id="@+id/black_box"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignTop="@id/green_square"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="230dp"
                    android:src="@drawable/black_square"
                    android:alpha="0.7"/>

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/black_box"
                    android:layout_alignTop="@id/black_box"
                    android:layout_alignRight="@id/black_box"
                    android:layout_alignBottom="@id/black_box"
                    android:fontFamily="@font/tajawal_bold"
                    android:lineSpacingExtra="1dp"
                    android:padding="10dp"
                    android:text="@string/txtKindof"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:elevation="3dp"/>



        <ImageView
            android:id="@+id/white_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_alignTop="@id/black_box"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/white_square" />

        <TextView
            android:id="@+id/teext"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignLeft="@id/white_box"
            android:layout_alignTop="@id/white_box"
            android:layout_alignRight="@id/white_box"
            android:layout_alignBottom="@id/white_box"
            android:fontFamily="@font/tajawal_medium"
            android:lineSpacingExtra="1dp"
            android:padding="10dp"
            android:text="@string/information_one"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:elevation="3dp"/>

        <Button
            android:id="@+id/videoBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="شاهد فيديو للتوضيح"
            android:textSize="24sp"
            android:fontFamily="@font/tajawal_bold"
            android:background="@drawable/green_square"
            android:layout_marginBottom="-70dp"
            android:layout_alignBottom="@id/white_box"
            android:layout_alignRight="@id/white_box"
            android:layout_alignLeft="@id/white_box"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="180dp"/>
        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="معلومة أخرى"
            android:textSize="24sp"
            android:fontFamily="@font/tajawal_bold"
            android:background="@drawable/green_square"
            android:layout_marginBottom="-70dp"
            android:layout_alignBottom="@id/white_box"
            android:layout_alignRight="@id/white_box"
            android:layout_alignLeft="@id/white_box"
            android:layout_marginLeft="180dp"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>
        </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity = "start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigatio_menu"
        android:background="#7AF48D"/>
</androidx.drawerlayout.widget.DrawerLayout>